interpreter/tests/test_files/neg/bad_flow_locality3.s
	mov r1 pc
	;; Cannot restrict Directed to Global
	restrict r1 RWX Directed
	restrict r1 RWX GLOBAL
	halt
